--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,12 +9,12 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 psycopg2==2.8.6
 pytest==6.1.0
-requests==2.24.0
+requests==2.28.2
 SQLAlchemy==1.3.19
-uvicorn==0.12.1
+uvicorn==0.21.1
 passlib==1.7.3
 bcrypt==3.2.0
 sqlalchemy-utils==0.36.8
 python-multipart==0.0.5
 pyjwt==2.6.0
-urllib3>=1.26.5 # not directly required, pinned by Snyk to avoid a vulnerability
+# urllib3>=1.26.5 # not directly required, pinned by Snyk to avoid a vulnerability
